--- a/app/src/main/res/layout/outreach_screen.xml
+++ b/app/src/main/res/layout/outreach_screen.xml
@@ -52,14 +52,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/employee_id"
+        android:id="@+id/employee_email"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="105dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="20dp"
-        android:hint="@string/enter_employee_id"
+        android:hint="Enter employee email"
         app:layout_constraintBottom_toTopOf="@+id/submit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/employee_id" />
+        app:layout_constraintTop_toBottomOf="@+id/employee_email" />
 
     <TextView
         android:id="@+id/outreachPrompt"
@@ -89,7 +89,7 @@
         android:layout_marginBottom="24dp"
         android:text="@string/enter_the_id_of_the_employee_you_would_like_permission_to_message_below"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/employee_id"
+        app:layout_constraintBottom_toTopOf="@+id/employee_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
