--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="employee_id" type="id" />
+    <item name="employee_email" type="id" />
     <item name="submit_button" type="id" />
 </resources>
