--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/purple_gradient"
     android:fitsSystemWindows="true"
     android:padding="5dp"
-    tools:context=".ChatActivity">
+    tools:context=".ChatPage">
 
     <LinearLayout
         android:layout_width="match_parent"
