--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ManageAccountActivity">
+    tools:context=".ManageAccountPage">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerBar"
