--- a/app/src/main/res/layout/activity_mass_message.xml
+++ b/app/src/main/res/layout/activity_mass_message.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MassMessageActivity">
+    tools:context=".MassMessagePage">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
