--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purple_gradient"
-    tools:context=".MessageActivity">
+    tools:context=".MessagesPage">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerBar"
